--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
           Hello fellow shoppers! We're currently building our new fashion store. 
           Add your email below to stay up-to-date with announcements and our launch deals.
         </p>
-        <form action="">
+        <form action="" id="form">
           <fieldset class="input-container">
-            <input type="email" placeholder="Email Address" required id="email">
+            <input type="text" placeholder="Email Address" id="email">
             <button type="submit" value="Submit" id="submit-button">
               <svg xmlns="http://www.w3.org/2000/svg" width="12" height="20"><path fill="none" stroke="#FFF" stroke-width="2" d="M1 1l8.836 8.836L1 18.671"/></svg>
             </button>
